src/test/ui/array-slice-vec/vector-cast-weirdness.stderr
error[E0606]: casting `&mut [u8; 2]` as `*mut u8` is invalid
  --> $DIR/vector-cast-weirdness.rs:21:23
   |
LL |     let p1: *mut u8 = &mut x1.y as *mut _;
   |                       ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0606`.
